--- a/PCDE/web_map/index.html
+++ b/PCDE/web_map/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CentroGEO. Proyectos finales. SIG. AE. PCDE</title>
+    <title>CentroGEO. Proyectos finales. SIG. AE. PCDE.</title>
 
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" /> -->
@@ -205,17 +205,6 @@
                             <img src="" alt="">
                         </span>
                     </div>
-<!--                     <div class="capas-lista-titulo">
-                        <img class="capas-lista-icono" src="./assets/icons/mapabase.svg" alt="layers">
-                        <h1>Mapas base.</h1>
-                    </div>  
-                    <div class="capas-lista-elemento">
-                        <input type="checkbox" id="capa1" name="capa1" value="capa1" checked>
-                        <label for="capa1">Cobertura Vegetal 2015</label>
-                        <span>
-                            <img src="" alt="">
-                        </span>
-                    </div> -->
 
                 </div>
 
