--- a/PCDE/web_map/index.html
+++ b/PCDE/web_map/index.html
@@ -41,11 +41,36 @@
                 <h3><p style="color: black;">PCDG:</p> Georreferenciación de zonas con problemáticas de agua, actualización de una base de datos espacial para reporte de problemas de escasez y visualización dinámica de la información mediante un mapa web.</h3>
                 <h4>Mtros:
                     <ul>
-                        <li>Mtra. Karime González Zuccolotto</li>
-                        <li>Dr. Camilo Alberto Caudillo Cos</li>
-                        <li>Dra. María del Pilar Fuerte Celis </li>
-                        <li>Dr. Oscar Gerardo Sánchez Siordia</li>
-                        <li>Dr. Gandhi Samuel Hernández Chan</li>
+                        <li>
+                            <div style="display: flex; align-items: center;">
+                                <img src="https://www.centrogeo.org.mx/images/stories/profiles/avatar/avatar731_adc31899d47b49037e715b65bd57e761.jpg" alt="Mtra. Karime González Zuccolotto" style="width: 40px; height: 40px; border-radius: 50%;">
+                                Mtra. Karime González Zuccolotto
+                            </div>
+                        </li>
+                        <li>
+                            <div style="display: flex; align-items: center;">
+                                <img src="https://www.centrogeo.org.mx/images/stories/profiles/avatar/avatar626_62c79cdd27ec120673c6a0248528b4ac.png" alt="Dr. Camilo Alberto Caudillo Cos" style="width: 40px; height: 40px; border-radius: 50%;">
+                                Dr. Camilo Alberto Caudillo Cos
+                            </div>
+                        </li>
+                        <li>
+                            <div style="display: flex; align-items: center;">
+                                <img src="https://www.centrogeo.org.mx/images/stories/profiles/avatar/avatar652_5925e657d96699871d88263fb0046125.jpg" alt="Dra. María del Pilar Fuerte Celis" style="width: 40px; height: 40px; border-radius: 50%;">
+                                Dra. María del Pilar Fuerte Celis
+                            </div>
+                        </li>
+                        <li>
+                            <div style="display: flex; align-items: center;">
+                                <img src="https://www.centrogeo.org.mx/images/stories/profiles/avatar/avatar664_fd700a0d0ed24b3f0d4ca400098c50f0.png" alt="Dr. Oscar Gerardo Sánchez Siordia" style="width: 40px; height: 40px; border-radius: 50%;">
+                                Dr. Oscar Gerardo Sánchez Siordia
+                            </div>
+                        </li>
+                        <li>
+                            <div style="display: flex; align-items: center;">
+                                <img src="https://www.centrogeo.org.mx/images/stories/profiles/avatar/avatar683_87da0fa069b55eb2ffcc3c47d3fadd06.jpg" alt="Dr. Gandhi Samuel Hernández Chan" style="width: 40px; height: 40px; border-radius: 50%;">
+                                Dr. Gandhi Samuel Hernández Chan
+                            </div>
+                        </li>
                     </ul>
                 </h4>
             </div>
@@ -215,7 +240,7 @@
                         <h1>Consulta.</h1>
                         <!-- Panel de seleccion de categoria de cobertura-->
                         <div id="busqueda" class="busqueda">
-                            <label for="categoria" id="categoria">Cobertura Vegetal 2022.</label>
+                            <label for="categoria" id="categoria">Delegación.</label>
                             <select id="cobertura">
                                 <option value="'TODOS'">Todos.</option>
                                 <option value="'CUERPO DE AGUA'">Cuerpo de agua.</option>
