--- a/PCDE/web_map/index.html
+++ b/PCDE/web_map/index.html
@@ -122,110 +122,110 @@
                     <!-- Lista de capas -->
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa1" name="capa1" value="capa1" checked>
-                        <label for="capa1">Problematicas agua<br>CDMX.</label>
+                        <label for="capa1">Problematicas de agua.<br>CDMX.</label>
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa2" name="capa2" value="capa2">
-                        <label for="capa2">Cobertura Vegetal 2015.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa3" name="capa3" value="capa3">
-                        <label for="capa3">Cambio Cobertura Vegetal 2015-2022.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa4" name="capa4" value="capa4">
-                        <label for="capa4">Vegetación Dominante<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa10" name="capa10" value="capa10">
-                        <label for="capa10">NDVI Planet 2022<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa11" name="capa11" value="capa11">
-                        <label for="capa11">NDVI Spot 2015<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa12" name="capa12" value="capa12">
-                        <label for="capa12">NDVI Diferencia 2015-2022<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa13" name="capa13" value="capa13">
-                        <label for="capa13">Diferencia 2015-2022 +- 1sd<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa14" name="capa14" value="capa14">
-                        <label for="capa14">Diferencia 2015-2022 +- 2sd<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa15" name="capa15" value="capa15">
-                        <label for="capa15">Diferencia 2015-2022 +- 3sd<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa5" name="capa5" value="capa5" checked>
-                        <label for="capa5">Sombra IGECEM2.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa6" name="capa6" value="capa6" checked>
-                        <label for="capa6">Entidades 2022.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
-                    <div class="capas-lista-titulo">
+<!--                     <div class="capas-lista-titulo">
                         <img class="capas-lista-icono" src="./assets/icons/rgb.svg" alt="layers">
                         <h1>Planet RGBs.</h1>
-                    </div>   
+                    </div>    -->
                     <!-- Lista de capas -->
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa7" name="capa7" value="capa7" >
-                        <label for="capa7">Color Verdadero.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa8" name="capa8" value="capa8" >
-                        <label for="capa8">Falso Color.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
                     </div>
                     <div class="capas-lista-elemento">
                         <input type="checkbox" id="capa9" name="capa9" value="capa9" >
-                        <label for="capa9">NIR Color.<br>Edo. México.</label>
+
                         <span>
                             <img src="" alt="">
                         </span>
@@ -243,18 +243,7 @@
                             <label for="categoria" id="categoria">Delegación.</label>
                             <select id="cobertura">
                                 <option value="'TODOS'">Todos.</option>
-                                <option value="'CUERPO DE AGUA'">Cuerpo de agua.</option>
-                                <option value="'ASENTAMIENTO HUMANO'">Asentamiento humano.</option>
-                                <option value="'AGRICULTURA'">Agricultura.</option>
-                                <option value="'PASTIZAL'">Pastizal.</option>
-                                <option value="'MATORRAL'">Matorral.</option>
-                                <option value="'BOSQUE CON MENOS DE 30 % DE COBERTURA'">Bosque con menos de 30% de cobertura.</option>
-                                <option value="'BOSQUE CON ENTRE 30 Y 60 % DE COBERTURA'">Bosque entre de 30% y 60% de cobertura.</option>
-                                <option value="'BOSQUE CON MAS DE 60 % DE COBERTURA'">Bosque con más de 60% de cobertura.</option>
-                                <option value="'SELVA CON MENOS DE 20 % DE COBERTURA'">Selva con menos de 20% de cobertura.</option>
-                                <option value="'SELVA CON MAS DE 20 % DE COBERTURA'">Selva con más de 20% de cobertura.</option>
-                                <option value="'HUMEDAL'">Humedal.</option>
-                                <option value="'SIN VEGETACION APARENTE'">Sin vegetación aparente.</option>
+                                <option value="'COYOACAN'">Coyoacan.</option>
                             </select>
 <!--                             <div align="center"><input type="submit" value="Ejecutar" class="botton-ejecutar" id="ejecutar"/></div> -->
                             <br>
