--- a/PCDE/web_map/index.html
+++ b/PCDE/web_map/index.html
@@ -281,9 +281,15 @@
         </div>
 
     </section>
+
+    <!-- Data -->
+    <scrip src="./assets/data/alcaldias_cdmx.js"></scrip>
+    <scrip src="./assets/data/colonias_cdmx.js"></scrip>
     
     <!-- Script -->
     <script src="./js/main.js"></script>
+
+
 
 </body>
 </html>
